tests/types/tremoved_pragma_syntax.nim
discard """
  errormsg: "invalid indentation"
"""

type Foo = object {.final.} # deprecated since v0.20.0
